--- a/examples/add/index.html
+++ b/examples/add/index.html
@@ -15,7 +15,7 @@
         delimiters: ['${', '}'],
         data: { value: 0 },
         mounted: function () {
-          this.value = this.$add(1, 1)
+          console.log(this.$session()
         }
       }).$mount('#app')
     </script>
